Fixed the wrapping box for hamburger

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -84,10 +84,10 @@ h1 {
 #nav-icon1 {
   margin: 0;
   padding: 0; 
-  width: 40px;
-  height: 0px;
+  width: 24px;
+  height: 24px;
   position: relative;
-  top: 10px;
+  top: 12px;
   left: -10px;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
